# autonomous-vehicle

./: .gitignore  CMakeLists.txt  README.md  package.xml  train.ipynb
Ackermann/: Ackermann_Steering.ino
Real/GPS/: GPS.launch
Real/ackermannDrive/: cmd_vel_to_ackermann_drive.py  test_ackermann_using_keyboard.launch
Real/config/: base_local_planner_params.yaml  dwa_local_planner_params.yaml  ekf_global.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
Real/launch/: Real.launch  localization_robot.launch  robot_navigation.launch
YOLO-V6/: YOLOv6-ROS-Publisher.py
YOLOv6/: YOLOv6-ROS-Publisher.py  train.ipynb
YOLOv6/150-udacity/: best_ckpt.json
YOLOv6/150-udacity+pedestrians/: best_ckpt.json  best_ckpt.xml
YOLOv7-tiny/: yolov7-tiny.json  yolov7-tiny.xml
ackermann_plugin/config/: ctrl_ackermann_steering_controller.yaml  ctrl_gains.yaml  ctrl_steer_bot_hardware_gazebo.yaml
ackermann_plugin/launch/: control.launch  steer_bot_sim.launch
config/: joint_names_historia.yaml
counter/: counter.ino
counter2/: counter2.ino
counter_pub/: counter_pub.ino
datasets/udacity-self-driving/: data.yaml
front_board/: front_board.h  front_board.ino  old_front_board.ino
launch/: display.launch  gazebo.launch
meshes/: base_link.STL  front_left_steer_link.STL  front_left_ultra_link.STL  front_middle_ultra_link.STL  front_right_steer_link.STL  front_right_ultra_link.STL  front_steer.STL  imu_link.STL  left_corner_ultra_link.STL  left_middle_ultra_link.STL  left_rear_ultra_link.STL  rear_left_wheel_link.STL  rear_ultra_link.STL  rear_wheel.STL  right_corner_ultra_link.STL  right_middle_ultra_link.STL  right_rear_ultra_link.STL
old_front_board/: old_front_board.ino
real/GPS/: GPS.launch
rear_board/: old_rear_board.ino  pwm.h  rear_board.h  rear_board.ino  rear_board_pins.h
src/board_controller/: README.md
src/board_controller/front_board/: front_board.h  front_board.ino
src/board_controller/rear_board/: rear_board.h  rear_board.ino
src/board_controller/ultrasonic/: new_ultrasonic.ino  ultrasonic.ino
src/historia/: CMakeLists.txt  ackermann_steering_controller_plugins.xml  package.xml
src/historia/Real/GPS/: TF_GPS.py
src/historia/Real/GPS/ROS-OSM-map-integration/: one.launch  scripts.js
src/historia/Real/GPS/Routing-ROS-Module/: CMakeLists.txt
src/historia/Real/ackermannDrive/: cmd_vel_to_ackermann_drive.py  test_ackermann_using_keyboard.launch
src/historia/Real/config/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  ekf_local.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  tf_map_to_odom_ekf.yaml  tf_map_to_odom_ekf_old.yaml  tf_odom_to_base_link_ekf.yaml
src/historia/Real/launch/: Real.launch  move_base.launch  octomap.launch  octomap_to_gridmap.launch  robot_navigation.launch
src/historia/Real/maps/: SORA.yaml  nile.pgm  nile.yaml  nile2.pgm  nile3.pgm  test4.yaml
src/historia/Real/rviz/: nav.rviz
src/historia/Real/script/: goal_auto.py  map_base_link_tf.py
src/historia/ackermann_plugin/config/: ctrl_ackermann_steering_controller.yaml  ctrl_steer_bot_hardware_gazebo.yaml
src/historia/ackermann_plugin/launch/: steer_bot_sim.launch
src/historia/launch/: display.launch  gazebo.launch
src/historia/meshes/: 3D_lidar.STL  front_left_wheel_link.STL  front_right_ultra_link.STL  front_right_wheel_link.STL  left_middle_ultra_link.STL  left_rear_ultra_link.STL  left_steering_hinge.STL  rear_right_wheel_link.STL  rear_ultra_link.STL  rear_wheel.STL  right_rear_ultra_link.STL  right_steering_hinge.STL  steering_link.STL
src/historia/urdf/: historia.xacro  historia2.xacro  mybot.gazebo
src/oakd/: CMakeLists.txt  package.xml
src/oakd/scripts/: bundle.py  imu.py  spatial.py
src/oakd_urdf/: CMakeLists.txt  package.xml
src/oakd_urdf/launch/: urdf.launch
src/oakd_urdf/urdf/: base_descr.urdf.xacro  depthai_descr.urdf.xacro
src/oakd_urdf/urdf/include/: base_macro.urdf.xacro  depthai_macro.urdf.xacro
src/perception/: CMakeLists.txt  package.xml
src/perception/scripts/: controller.py  traffic_detector.py
src/robot_localization/launch/: dual_ekf_navsat_example.launch
src/robot_localization/params/: dual_ekf_navsat_example.yaml  navsat_transform_template.yaml
src/web_viewer/: CMakeLists.txt  README.md  index.html  package.xml
src/web_viewer/html/: index.html
src/web_viewer/html/res/: main.css
src/web_viewer/html/res/js/: core.js
src/web_viewer/js/: core.js
src/web_viewer/launch/: web.launch
src/web_viewer/res/: main.css
src/web_viewer/res/js/: core.js
src/web_viewer/scripts/: server.py
src/zed-ros-wrapper/zed_wrapper/params/: common.yaml  zed.yaml  zed2.yaml
steering_code/: stepper_motor
urdf/: historia.csv  historia.xacro  mybot.gazebo
utils/: autosplit.py
world/: firstworld.world
yolo-v6/: autosplit.py
yolov5/: autosplit.py
yolov6/: autosplit.py
