<package format="2">
  <name>historia</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for historia</p>
    <p>This package contains configuration data, 3D models and launch files
for historia robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

<build_depend>roscpp</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>nav_msgs</build_depend>

<build_export_depend>roscpp</build_export_depend>
<build_export_depend>sensor_msgs</build_export_depend>
<build_export_depend>geometry_msgs</build_export_depend>
<build_export_depend>std_msgs</build_export_depend>
<build_export_depend>nav_msgs</build_export_depend>

<exec_depend>roscpp</exec_depend>
<exec_depend>sensor_msgs</exec_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>std_msgs</exec_depend>
<exec_depend>nav_msgs</exec_depend>

<!-- from .xml of steer_bot_control-->
    <exec_depend>ackermann_steering_controller</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>joint_state_controller</exec_depend>
    <exec_depend>ackermann_steering_controller</exec_depend>
    <exec_depend>steer_drive_controller</exec_depend>

<!-- from .xml of description-->
    <depend>urdf</depend>
    <depend>xacro</depend>

<!-- from .xml of steer_bot_gazebo-->
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>gazebo_ros_control</exec_depend>
    <exec_depend>rqt_robot_steering</exec_depend>
    <exec_depend>steer_bot_control</exec_depend>
    <exec_depend>steer_bot_hardware_gazebo</exec_depend>
    <exec_depend>steer_bot_description</exec_depend>

<!-- from .xml of steer_bot_rviz-->
    <buildtool_depend>catkin</buildtool_depend>


  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>